--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="MyPhone.js"></script>
+<script src="Dinner.js"></script>
+<script src="SchoologyUser.js"></script>
+<script src="CodeSchoolInstructor.js"></script>
+<script src="GitHubUser.js"></script>
+<script src="TwitterUser.js"></script>
+
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
